# polar-sgd

./: .$polar-pp.drawio.bkp  .gitignore  .pre-commit-config.yaml  README.md  README_cn.md  main.ipynb  main.py  overview.drawio  polar-pp.drawio  polar_trainer.py  pyproject.toml  requirements.txt  test.py  test_llama.py  test_polar_simple.py  train.py  train_qwen.py  train_yolo.py
comm/: process_group_setup.py
comm/compress/: analyzation.md
docs/: LOCAL_SGD.md
graph/: dp_across_dcs.drawio  local_sgd.drawio  overview.drawio  overview__.drawio  overview_en.drawio  polar-pp.drawio  polar-pp_overview.drawio  pp_across_dcs.drawio
models/: model_dispatcher.py  model_install.py
models/llama/: llama_nn.py
parallelism/polar/: Technical_Explanation.md  hooks.py  util.py  wrapper.py
scripts/: 0_train_llama7b_baseline.sh  0_train_llama7b_standard.sh  1_train_llama7b_baseline.sh  1_train_llama7b_standard.sh
scripts/1dp_16pp/: 0_train_qwen14b_baseline copy.sh  0_train_qwen14b_baseline.sh
scripts/1dp_2pp/: 0_train_llama7b_standard.sh
scripts/1dp_4pp/: 0_train_llama7b_standard.sh  1_train_llama7b_standard.sh
scripts/2dp_2pp/: 0_train_llama7b_standard.sh  (+1 more)
tests/: test_llama.py  test_pipeline.py  train_llama7b.py  train_llama7b_ddp_dp_pp.py  train_llama7b_polar_dp_pp.py  train_llama7b_polar_dp_pp_baseline.py  train_llama7b_torch_dp_pp.py  train_llama7b_torch_dp_pp_dp_centered.py  train_llama7b_torch_dp_pp_pp_centered.py  train_llama7b_torch_pp.py  train_qwen14b_polar_dp_pp.py  train_qwen_polar_dp_pp.py
tokenizer/: tokenize_preprocess.py
utils/: buffer.py
(+133 files in other folders)
