[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psgd"
version = "0.1.0"
description = "A short description"
authors = [{name = "anonymous", email = "anonymous@anoymousmail.com"}]

dependencies = [
    "torch",
    "torchvision",
    "datasets",
    "transformers",
    "sentencepiece",
    "tensorboard",
    "torch_tb_profiler",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["my_package*"]

[tool.setuptools.package-dir]
"" = "src"